# Veelocity

./: .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPTS.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4593294b3e8c_add_details_synced_at_to_pull_requests.py  80f635ea2232_add_recommendation_runs.py  acd5ad9b6546_add_github_models.py  b1c2d3e4f567_add_github_actions_models.py  c3d4e5f6g789_add_linear_models.py  d4e5f6g7h890_add_sync_state.py  e5f6g7h8i901_add_app_settings.py  f6g7h8i9j012_add_linear_workflow_states.py  g7h8i9j0k123_add_workflow_state_type.py  h8i9j0k1l234_add_cursor_api_key.py  i9j0k1l2m345_add_greptile_api_key.py  j0k1l2m3n456_add_cursor_greptile_tables.py  k1l2m3n4o567_add_linear_issue_state_transitions.py  l2m3n4o5p678_add_url_to_linear_issues.py  m3n4o5p6q789_widen_github_repos_to_text.py  n4o5p6q7r890_make_workflow_run_head_branch_nullable.py  o5p6q7r8s901_add_sentry_settings.py  p6q7r8s9t012_add_sentry_tables.py  q7r8s9t0u123_add_project_labels_to_linear_issues.py  r8s9t0u1v234_add_sentry_snapshots.py  s9t0u1v2w345_add_users_table.py  t0u1v2w3x456_add_user_is_active.py  u1v2w3x4y567_add_default_user.py  v2w3x4y5z678_add_developer_teams.py  w3x4y5z6a789_add_user_last_login_at.py  x5y6z7a8b901_add_developer_linear_links.py
backend/app/: main.py
backend/app/connectors/: base.py  (+5 more)
backend/scripts/: activate_user.py  clear_linear_data.py  query_db.py
backend/tests/: conftest.py
(+286 files in other folders)
