[project]
name = "veelocity"
version = "0.1.0"
description = "Developer analytics platform measuring DORA metrics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "apscheduler>=3.10.4",
    "alembic>=1.13.1",
    "numpy>=1.26.0",
    "cryptography>=42.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "respx>=0.21.1",
    "black>=24.1.0",
    "ruff>=0.1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"

[tool.black]
target-version = ["py311"]
